@@ -2,6 +2,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.10.1 (unreleased)
   - Refactor repository storages documentation. !5428
+  - Gracefully handle case when keep-around references are corrupted or exist already. !5430
 
 v 8.10.0
   - Fix profile activity heatmap to show correct day name (eanplatter)
